using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace RAF.Course
{
    public class CourseItemObserver 
    {

    }

    public interface ICourseItemObservable
    {

    }
}