using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using Zenject;
using UniRx;

namespace RAF.Course
{
    public class CourseManager : MonoBehaviour
    {
        //[Inject]
        //private IObservableFallDetector m_fallDetector;
        //[Inject]
        //private ICourseGenerator m_courseGenerator;

        //private int n = 3;

        //// Start is called before the first frame update
        //void Start()
        //{
        //    m_fallDetector.FallDetected
        //                  .Subscribe(_ => m_courseGenerator.Generate(++n));
        //}
    }
}