using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace RAF.Item
{
    /// <summary>
    /// 制限時間延長アイテム
    /// </summary>
    public class TimeExtendItem : ItemBase
    {
        public override void Use()
        {
            throw new System.NotImplementedException();
        }

        // Start is called before the first frame update
        void Start()
        {

        }
    }
}